--- a/www2.html
+++ b/www2.html
@@ -14,8 +14,8 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            /* Background image and styling */
-            background: url('https://github.com/Subha-Py-c/first-WEBs/blob/main/%20%200.png') center/cover no-repeat;
+            /* Corrected background image URL */
+            background: url('https://raw.githubusercontent.com/Subha-Py-c/first-WEBs/main/0.png') center/cover no-repeat;
             color: #000; /* Set text color to black */
         }
 
