--- a/www2.html
+++ b/www2.html
@@ -15,7 +15,7 @@
             justify-content: center;
             height: 100vh;
             /* Corrected background image URL */
-            background: url('') center/cover no-repeat;
+            background: url('https://github.com/Subha-Py-c/first-WEBs/blob/main/image1_0-2.jpg') center/cover no-repeat;
             color: #000; /* Set text color to black */
         }
 
