--- a/www2.html
+++ b/www2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Something About You...</title>
+    <title>Something For You...</title>
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -14,42 +14,42 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            /* Corrected background image URL */
             background: url('https://raw.githubusercontent.com/Subha-Py-c/first-WEBs/main/image1_0-2.jpg') center/cover no-repeat;
-            color: #000; /* Set text color to black */
+            color: #000000;
         }
 
-        #container {
+        #container {    /* ## the large box ## */
             text-align: center;
-            background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white background */
+            background-color: rgba(255, 255, 255, 0.0); /* Semi-transparent white background er jonno*/
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 400px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.0);
+            max-width: 400px;   /* ## alpha = 0.0, so invisible ## */
             width: 90%;
         }
 
-        #headerText {
-            font-size: 2em;
+        #headerText {       /* ## the Heading text ||8f2f48|## */
+            font-size: 2.17em;
             font-weight: bold;
-            margin-bottom: 20px;
-            color: #336699;
+            margin-bottom: 20px; /* ## distance from name box ## */
+            color: #f48510;
         }
 
-        #firstName {
-            margin-bottom: 20px;
+        #firstName {    /* ## name box ## */
+            margin-bottom: 13px;
             width: 100%;
-            padding: 10px;
+            padding: 8px;
             box-sizing: border-box;
-            border: 1px solid #ccc;
-            border-radius: 5px;
+            border: 2px solid #ccc;
+            border-radius: 15px;
+            background-color: transparent; /* */
         }
 
         #giftButton {
             padding: 10px 20px;
             font-size: 1em;
             cursor: pointer;
-            background-color: #16a085;
+            background-color: rgba(228, 153, 24, 0.8); /* Semi-transparent red */
             color: #fff;
             border: none;
             border-radius: 5px;
@@ -59,20 +59,23 @@
         #quoteContainer {
             display: none;
             margin-top: 25px;
+            background-color: transparent; /* Make the background fully transparent */
         }
 
         #quote {
-            font-size: 1.5em;
-            font-style: italic;
-            margin-bottom: 10px;
-            color: #000; /* Set quote text color to black */
+            font-size: 1.75em;
+            font-weight: bold; /* Make the text bold */
+            font-style: italic; /* Make the text italic */
+            margin-bottom: 5px;
+            color: #df8c1b; /* Set quote text color to black */
         }
+
     </style>
 </head>
 <body>
 
     <div id="container">
-        <div id="headerText">Something About You...</div>
+        <div id="headerText">Something For You...</div>
         <input type="text" id="firstName" placeholder="Enter your first name">
         <button id="giftButton" onclick="showQuote()">Click Here</button>
         <div id="quoteContainer">
@@ -82,11 +85,11 @@
 
     <script>
         const quotes = [
-            "Dear {name}, you are capable of being the unbelievable, so embrace yourself for the upcoming adventures of life !",
+            "Dear {name}, you are capable of being the unbelievable, so embrace yourself for the upcoming adventures of your life.",
             "{name}, may your days be filled with joy, laughter, and endless inspiration.",
-            "As you navigate life's path, {name}, remember that every step is a victory.",
-            "{name}, you have the power to create the life of your dreams. Seize the day!",
-            "In the canvas of life, paint bold strokes, {name}, and create a masterpiece."
+            "As you navigate through the path of your life, {name}, always remember that every step is a victory.",
+            "{name}, you have the power to create the life of your dreams. Seize the day...",
+            "{name}, in the canvas of life, paint bold strokes, and create a masterpiece such that the very World will become a mere spectator."
         ];
 
         function showQuote() {
