--- a/www2.html
+++ b/www2.html
@@ -14,7 +14,7 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background: url('https://raw.githubusercontent.com/Subha-Py-c/first-WEBs/main/image1_0-2.jpg') center/cover no-repeat;
+            background: url('https://i.imgur.com/xVPm5lc.jpg') center/cover no-repeat;
             color: #000000;
         }
 
