--- a/www3.html
+++ b/www3.html
@@ -14,7 +14,7 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background: url('https://i.imgur.com/cO85NMa.png') center/cover no-repeat;
+            background: url('https://i.imgur.com/z8iKeUG.jpg') center/cover no-repeat;
             color: #000000;
         }
 
