--- a/www4.html
+++ b/www4.html
@@ -14,7 +14,7 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background: url('https://i.imgur.com/msi5LRA.jpg') center/cover no-repeat;
+            background: url('***') center/cover no-repeat;
             color: #000000;
         }
 
